--- a/lectures/Block_Ciphers.tex
+++ b/lectures/Block_Ciphers.tex
@@ -70,10 +70,6 @@ weaknesses
 how to break a block cipher
 \fi
 
-\begin{frame}{}
-	\tableofcontents
-\end{frame}
-
 \begin{frame}{Block Cipher}{}
 \begin{block}{The formal definition}
 ``In cryptography, a block cipher is a deterministic algorithm operating on fixed-length groups of bits, called blocks, with an unvarying transformation that is specified by a symmetric key.''
@@ -216,7 +212,7 @@ A cipher that has the same key to encrypt and decrypt.
 	\begin{minipage}{0.45\textwidth}
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{spn}
+			\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{pictures/spn}
 		\end{figure}
 	\end{minipage}
 	\begin{minipage}{0.45\textwidth}
@@ -238,7 +234,7 @@ A cipher that has the same key to encrypt and decrypt.
 	\begin{minipage}{0.45\textwidth}
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{feistel-structure}
+			\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{pictures/feistel-structure}
 		\end{figure}
 	\end{minipage}
 	\begin{minipage}{0.45\textwidth}
@@ -259,7 +255,7 @@ A cipher that has the same key to encrypt and decrypt.
 	\begin{minipage}{0.45\textwidth}
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{lai-massey}
+			\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{pictures/lai-massey}
 		\end{figure}
 	\end{minipage}
 	\begin{minipage}{0.45\textwidth}
