Some updates to hw1

--- a/hw/hw1.tex
+++ b/hw/hw1.tex
@@ -17,7 +17,7 @@
 \date{Due September 29, 2015}
 \begin{document}
 \maketitle
-%\printanswers
+\printanswers
 
 % this is exposition for Question 1, but I can't put it in \begin{questions}
 
@@ -124,6 +124,10 @@
 			\end{array}
 			\]
 			There are two ways to fill in the last entry.
+
+			\textbf{Note:} The question does not specify that $\star$ must be a
+			group. I believe I misunderstood the question when explaining it to
+			Aaron/Staggs, so they will probably have that there is only one way.
 		\end{solution}
 		\part Can the table be completed in such a way that $u$ and $v$ both become identity elements?
 		\begin{solution}
@@ -154,7 +158,7 @@
 			(a \star b) \star c &= b \star (c \star a) \\
 			a \star (b \star c) &= (b \star c) \star a \\
 		\end{align*}
-		Therefore $b \star c \in C(a)$.
+		$b \star c$ commutes with $a$; therefore $b \star c \in C(a)$.
 	\end{solution}
 
 	\section*{Groups}
